generated/nixidy/prod/grafana/Pod-grafana-test.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test
    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
  labels:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
  name: grafana-test
  namespace: monitoring
spec:
  containers:
    - command:
        - /opt/bats/bin/bats
        - -t
        - /tests/run.sh
      image: docker.io/docker.io/bats/bats:1.12.0
      imagePullPolicy: IfNotPresent
      name: grafana-test
      volumeMounts:
        - mountPath: /tests
          name: tests
          readOnly: true
  restartPolicy: Never
  serviceAccountName: grafana-test
  volumes:
    - configMap:
        name: grafana-test
      name: tests
