generated/nixidy/prod/grafana/HTTPRoute-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: grafana-prometheus
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
  name: grafana
  namespace: monitoring
spec:
  hostnames:
    - grafana.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: grafana
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
